Security hardening: database-backed sessions, persistent rate limiting, and secured admin functions
- Add sessions table for database-backed session storage
- Add rate_limits table for persistent rate limiting
- Secure admin functions (import-texas-hospitals, remove-duplicates, fix-coordinates) with:
  - JWT verification (verify_jwt = true)
  - Admin role verification
  - CSRF token validation
  - Database-backed rate limiting
- Update auth-cookie to store sessions in database
- Update logout to delete sessions from database
- Convert all edge functions to use database rate limiting instead of in-memory
- Add cleanup functions for expired sessions and rate limits

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -37,10 +37,10 @@ verify_jwt = false
 verify_jwt = false
 
 [functions.import-texas-hospitals]
-verify_jwt = false
+verify_jwt = true
 
 [functions.remove-duplicates]
-verify_jwt = false
+verify_jwt = true
 
 [functions.fix-coordinates]
-verify_jwt = false
+verify_jwt = true
